added filter methods
